Make it easy to run github action tests locally

--- a/.github/actions/test-with-docker/Dockerfile
+++ b/.github/actions/test-with-docker/Dockerfile
@@ -4,7 +4,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-           ca-certificates curl git make unzip
+           ca-certificates curl git make unzip \
     && rm -rf /var/lib/apt/lists/*
 
 
