--- a/.github/actions/test-with-docker/Dockerfile
+++ b/.github/actions/test-with-docker/Dockerfile
@@ -4,7 +4,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-           ca-certificates curl git make unzip \
+           ca-certificates curl git make unzip sudo \
     && rm -rf /var/lib/apt/lists/*
 
 
@@ -13,7 +13,7 @@ RUN sudo curl -fsSL -o /usr/local/bin/cliv https://raw.githubusercontent.com/pet
     && echo "3708fa6d60f90d2ca610337260b583afb945de1433344ad20bd06c23ccdebcdc  /usr/local/bin/cliv" | sha256sum -c \
     || { echo "FAILED CHECKSUM: REMOVING cliv" && sudo rm -f /usr/local/bin/cliv ; }
 
-RUN cliv -I terraform
+RUN cliv -E terraform
 
 COPY entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
