--- a/.github/actions/test-with-docker/Makefile
+++ b/.github/actions/test-with-docker/Makefile
@@ -2,4 +2,4 @@ docker-build:
 	docker build -t test-with-docker:latest .
 
 docker-run:
-	docker run --rm -it test-with-docker:latest
+	docker run --rm -it -v $$(pwd)/../../..:/app -w /app test-with-docker:latest
