--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -18,8 +18,11 @@ jobs:
   update_release_draft:
     runs-on: ubuntu-latest
     permissions:
+      # write permission is required to create a github release
       contents: write
-      actions: write
+      # write permission is required for autolabeler
+      # otherwise, read permission is required at least
+      pull-requests: write
     steps:
       - uses: release-drafter/release-drafter@v5
         env:
