--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,55 @@
+autolabeler:
+  - label: 'chore'
+    files:
+      - '*.md'
+    branch:
+      - '/docs{0,1}\/.+/'
+    title:
+     - '/docs/i'
+  - label: 'bug'
+    branch:
+      - '/fix\/.+/'
+    title:
+      - '/fix/i'
+      - '/bug/i'
+  - label: 'enhancement'
+    branch:
+      - '/feature\/.+/'
+
+name-template: 'v$RESOLVED_VERSION 🌈'
+tag-template: 'v$RESOLVED_VERSION'
+categories:
+  - title: '🚀 Features'
+    labels:
+      - 'feature'
+      - 'enhancement'
+  - title: '🐛 Bug Fixes'
+    labels:
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+  - title: '🧰 Maintenance'
+    label: 'chore'
+change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
+
+version-template: "$MAJOR.MINOR"
+version-resolver:
+  major:
+    labels:
+     - 'major'
+  minor:
+    labels:
+     - 'minor'
+  patch:
+    labels:
+     - 'patch'
+  default: minor
+
+commitish: "main"
+target_commitish: "main"
+
 template: |
-  ## What’s Changed
+  ## [v$RESOLVED_VERSION]
 
   $CHANGES
