--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -33,7 +33,7 @@ categories:
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 
-version-template: "$MAJOR.MINOR"
+version-template: "$MAJOR.$MINOR"
 version-resolver:
   major:
     labels:
