--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,23 +10,42 @@ jobs:
     name: Run tests on a pull request
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_HOST: postgres
-          POSTGRES_PORT: 5432
-          POSTGRES_DB: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
-        ports:
-          - 5432:5432
-        # set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    strategy:
+      matrix:
+        container:
+          - "hashicorp/terraform:0.11.15"
+          - "hashicorp/terraform:0.12.31"
+          - "hashicorp/terraform:0.13.7"
+          - "hashicorp/terraform:0.14.11"
+          - "hashicorp/terraform:0.15.5"
+          - "hashicorp/terraform:1.0.11"
+          - "hashicorp/terraform:1.1.9"
+          - "hashicorp/terraform:1.2.9"
+          - "hashicorp/terraform:1.3.10"
+          - "hashicorp/terraform:1.4.7"
+          - "hashicorp/terraform:1.5.7"
+          - "hashicorp/terraform:1.6.3"
+
+    #services:
+    #  postgres:
+    #    image: postgres:latest
+    #    env:
+    #      POSTGRES_HOST: postgres
+    #      POSTGRES_PORT: 5432
+    #      POSTGRES_DB: postgres
+    #      POSTGRES_USER: postgres
+    #      POSTGRES_PASSWORD: password
+    #    ports:
+    #      - 5432:5432
+    #    # set health checks to wait until postgres has started
+    #    options: >-
+    #      --health-cmd pg_isready
+    #      --health-interval 10s
+    #      --health-timeout 5s
+    #      --health-retries 5
+
+    container:
+      image: "${{ matrix.container }}"
 
     steps:
 
@@ -40,8 +59,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run test suite
-        uses: ./.github/actions/test-with-docker
-        env:
-          DEBUG: 1
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+            pwd
+            ls -la
+            make
+
+      #- name: Run test suite
+      #  uses: ./.github/actions/test-with-docker
+      #  env:
+      #    DEBUG: 1
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
