--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,17 @@ jobs:
       matrix:
         container:
           - "hashicorp/terraform:0.11.15"
-          - "hashicorp/terraform:0.12.31"
-          - "hashicorp/terraform:0.13.7"
-          - "hashicorp/terraform:0.14.11"
-          - "hashicorp/terraform:0.15.5"
-          - "hashicorp/terraform:1.0.11"
-          - "hashicorp/terraform:1.1.9"
-          - "hashicorp/terraform:1.2.9"
-          - "hashicorp/terraform:1.3.10"
-          - "hashicorp/terraform:1.4.7"
-          - "hashicorp/terraform:1.5.7"
-          - "hashicorp/terraform:1.6.3"
+          #- "hashicorp/terraform:0.12.31"
+          #- "hashicorp/terraform:0.13.7"
+          #- "hashicorp/terraform:0.14.11"
+          #- "hashicorp/terraform:0.15.5"
+          #- "hashicorp/terraform:1.0.11"
+          #- "hashicorp/terraform:1.1.9"
+          #- "hashicorp/terraform:1.2.9"
+          #- "hashicorp/terraform:1.3.10"
+          #- "hashicorp/terraform:1.4.7"
+          #- "hashicorp/terraform:1.5.7"
+          #- "hashicorp/terraform:1.6.3"
 
     #services:
     #  postgres:
@@ -62,6 +62,7 @@ jobs:
         run: |
             pwd
             ls -la
+            apt-get update && apt-get install -y ca-certificates git make unzip sudo shellcheck
             make
 
       #- name: Run test suite
