--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,19 +12,19 @@ jobs:
 
     strategy:
       matrix:
-        container:
-          - "hashicorp/terraform:0.11.15"
-          #- "hashicorp/terraform:0.12.31"
-          #- "hashicorp/terraform:0.13.7"
-          #- "hashicorp/terraform:0.14.11"
-          #- "hashicorp/terraform:0.15.5"
-          #- "hashicorp/terraform:1.0.11"
-          #- "hashicorp/terraform:1.1.9"
-          #- "hashicorp/terraform:1.2.9"
-          #- "hashicorp/terraform:1.3.10"
-          #- "hashicorp/terraform:1.4.7"
-          #- "hashicorp/terraform:1.5.7"
-          #- "hashicorp/terraform:1.6.3"
+        version:
+          - "0.11.15"
+          #- "0.12.31"
+          #- "0.13.7"
+          #- "0.14.11"
+          #- "0.15.5"
+          #- "1.0.11"
+          #- "1.1.9"
+          #- "1.2.9"
+          #- "1.3.10"
+          #- "1.4.7"
+          #- "1.5.7"
+          #- "1.6.3"
 
     #services:
     #  postgres:
@@ -58,16 +58,29 @@ jobs:
       - name: Checkout git
         uses: actions/checkout@v2
 
-      - name: Run test suite
-        run: |
-            pwd
-            ls -la
-            apt-get update && apt-get install -y ca-certificates git make unzip sudo shellcheck
-            make
-
-      #- name: Run test suite
-      #  uses: ./.github/actions/test-with-docker
+      #- name: Build container
+      #  uses: ./.github/actions/terraform-version-runner
+      #  with:
+      #    terraform-version: "${{matrix.version}}"
       #  env:
       #    DEBUG: 1
       #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ".github/actions/terraform-version-runner/Dockerfile"
+          tags: "local-terraform:$${matrix.version}}"
+          load: true
+          cache-from: "type=gha"
+          cache-to: "type=gha,mode=max"
+          push: false
+          build-args: [ "TFVER=$${matrix.version}}" ]
+
+      - name: Run test suite
+        run: |
+            pwd
+            ls -la
+            terraform --version
+            make
