--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: "local-terraform:${{ matrix.version }}"
-          options: "-v ${{ github.workspace }}:/work -w /work -e DEBUG=1"
+          options: "-v ${{ github.workspace }}:/work -w /work"
           run: |
               terraform --version
               make
